--- a/DutchmanSite/DutchmanSite/Content/NiceBowling.css
+++ b/DutchmanSite/DutchmanSite/Content/NiceBowling.css
@@ -78,6 +78,62 @@ p {
   }
 }
 
+/*EMAIL LIST*/
+
+.emailIcon{
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    float: right;
+    bottom: 15px;
+    transform: translate(-25%,-40%);
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    background: linear-gradient(#f266ad,#9b3ac1,black);
+    background-size: 400% 400%;
+    box-shadow: 0.5vw 0.5vw 0 #4dfbc6;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.emailIcon:hover {
+        animation: gradient 10s ease infinite;
+        font-size: 2.05vw;
+        box-shadow: 0.02vw 0.2vw 0 #250e39;
+ }
+
+#Spam .modal-content h2 {
+    color: black;
+    font-family: Lazer84;
+    font-size: 4em;
+    align-content: center;
+    text-shadow: 8px 1px 8px #4dfbc6;
+    letter-spacing: 3px;
+    text-align: center;
+}
+
+#Spam .modal-content p.item-intro {
+    color: black;
+    text-align: center;
+    font-family: Nexa, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 1.5em;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px #4dfbc6;
+}
+
+#Spam .modal-content {
+    background: linear-gradient(#f266ad,#9b3ac1,black);
+}
+
+#Spam.label {
+    font-family: Nexa, Arial, Helvetica, sans-serif;
+}
+
+
 /*FOLIO ELEMENTS SPECIFIC TO NB*/
 
 #folio {
