--- a/DutchmanSite/DutchmanSite/Content/WyrdOfStromgard.css
+++ b/DutchmanSite/DutchmanSite/Content/WyrdOfStromgard.css
@@ -24,6 +24,67 @@ body {
     background-position: center center;
 }
 
+/*MAILING LIST*/
+
+.emailIcon{
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    float: right;
+    bottom: 15px;
+    transform: translate(-25%,-40%);
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    background: linear-gradient(#1d1c2c,#6b7588);
+    background-size: 400% 400%;
+    box-shadow: 0.5vw 0.5vw 0 #676975;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.emailIcon:hover {
+        animation: gradient 10s ease infinite;
+        font-size: 2.05vw;
+        box-shadow: 0.02vw 0.2vw 0 #250e39;
+ }
+
+#Spam .modal-content h2 {
+    color: #2a3546;
+    font-size: 4em;
+    align-content: center;
+    text-shadow: 5px 1px #676975;
+    letter-spacing: 2px;
+    text-align: center;
+}
+
+#Spam .modal-content p.item-intro {
+    color: black;
+    text-align: center;
+    font-family: Nexa, Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 1.5em;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 1px  #676975;
+}
+
+#Spam .modal-content {
+    background: linear-gradient(#979bab,#1d1c2c);
+}
+
+#Spam.label {
+    font-family: Nexa, Arial, Helvetica, sans-serif;
+}
+
+#Spam .btn-xl {
+    color: #2a3546;
+    border-color: #1d1c2c;
+    background-color: #768b9c;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
 .btn-primary {
     border-color: #1d1c2c;
     background-color: #768b9c;
